<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/roots_padding">

    <ImageButton
        android:id="@+id/skull_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:layout_marginTop="@dimen/padding"
        style="@style/ImageButton"
        app:srcCompat="@mipmap/ic_launcher" />


    <ViewFlipper
        android:id="@+id/flipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="@dimen/padding">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/start"
                style="@style/Buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/start" />

            <TextView
                android:id="@+id/how_work"
                style="@style/SmallLabels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:paddingBottom="@dimen/padding"
                android:text="@string/how_work_title" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ProgressBar
                android:id="@+id/bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="@dimen/barSize"
                android:layout_height="@dimen/barSize"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/padding" />

            <TextView
                android:id="@+id/input_label"
                style="@style/Labels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/bar"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/padding"
                android:text="@string/touch_the_button" />

            <Button
                android:id="@+id/scanning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_label"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/padding"
                android:text="@string/touch_to_scan" />

            <ProgressBar
                android:id="@+id/computing_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_label"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/padding"
                android:visibility="gone" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/brain_size_label"
                style="@style/Labels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/brain_size" />

            <Button
                android:id="@+id/restart"
                style="@style/Buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:padding="@dimen/padding"
                android:text="@string/begin_again" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/restart"
                android:layout_below="@id/brain_size_label"
                android:padding="@dimen/padding" />

        </RelativeLayout>

    </ViewFlipper>
</LinearLayout>