<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/roots_padding">


    <TextView
        android:id="@+id/label"
        style="@style/Labels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/fing_label" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/label"
        android:layout_above="@+id/reset"
        android:layout_marginBottom="@dimen/padding"
        android:layout_marginTop="@dimen/padding">

        <LinearLayout
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"></LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/reset"
        style="@style/Buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/input"
        android:layout_centerHorizontal="true"
        android:text="@string/reset" />

    <TextView
        android:id="@+id/input_label"
        style="@style/Labels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/input"
        android:layout_marginRight="15px"
        android:text="@string/input_label"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/input"
        style="@style/Labels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="@dimen/padding"
        android:layout_marginStart="@dimen/padding"
        android:layout_toEndOf="@id/input_label"
        android:layout_toRightOf="@+id/input_label"
        android:ems="10"
        android:inputType="numberSigned"
        android:text="1" />

</RelativeLayout>